# T2S

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BENCHMARK.md  CLAUDE.md  Dockerfile  Dockerfile.embeddings  Makefile  README.md  architecture.md  docker-compose.test.yml  docker-compose.yml  embedding_server.py  install.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml  quick_start.md  server.json  setup_e2e_tests.sh  start.sh  tests.md
.github/: copilot-instructions.md  wordlist.txt
.github/workflows/: playwright.yml  publish-docker.yml  pylint.yml  tests.yml
api/: app_factory.py  config.py  graph.py  index.py  logging_buffer.py  runtime_settings_store.py  tls.py  utils.py
api/agents/: analysis_agent.py  business_rule_rag_agent.py  filter_validator_agent.py  formula_validator_agent.py  healer_agent.py  linker_agent.py  memory_agent.py  metric_resolver_agent.py  relevancy_agent.py  response_formatter_agent.py  schema_enrichment_agent.py  schema_topup_agent.py  sql_gate_agent.py  sql_semantic_validator.py  tool_blackboard_agent.py  utils.py
api/auth/: user_management.py
api/core/: __init__.py  blackboard.py  db_resolver.py  filter_value_validator.py  gazetteer.py  knowledge.py  pipeline.py  query_cache.py  ratio_formula_gate.py  request_models.py  result_models.py  schema_loader.py  schema_refresh.py  schema_selection.py  session_context.py  text2sql.py  value_grounding.py
api/loaders/: __init__.py  agent_loader.py  base_loader.py  doc_text.py  graph_loader.py  graph_merge.py  impala_loader.py  mysql_loader.py  postgres_loader.py  snowflake_loader.py  yaml_loader.py
api/memory/: __init__.py  graphiti_tool.py
api/routes/: auth.py  database.py  graphs.py  settings.py  tokens.py
api/sql_utils/: __init__.py  gate_registry.py  sql_comments.py  sql_gate.py  sql_sanitizer.py
app/: index.html  package-lock.json  package.json
app/src/: index.css  main.tsx
app/src/config/: api.ts
business-rules/: business_knowledge.md  craft_rules_reference.md  cyber_business_knowledge.md  sports_business_knowledge.md  user_rules.md
db-init/: 02_sports_column_comments.sql
docs/: postgres_loader.md  snowflake_loader.md
e2e/: docker-compose.test.yml
examples/: README.md  ecommerce_example.py  ecommerce_example.sql
livesqlbench-kb/: build_kb_artifacts.py  sports_events_large_column_meaning_base.json  sports_events_large_kb.jsonl
t2s/: __init__.py  client.py  connection.py  models.py
test-platform/: .dockerignore  .env.example  .gitignore  AGENTS.md  BENCHMARK_TRAIN.jsonl  BENCHMARK_TRAIN_cyber.jsonl  BENCHMARK_TRAIN_dm_mis.jsonl  BENCHMARK_cybermarket_pattern_large.jsonl  BENCHMARK_dm_mis.jsonl  BENCHMARK_dm_mis_10.jsonl  BENCHMARK_dm_mis_3.jsonl  BENCHMARK_dm_mis_impala.jsonl  BENCHMARK_dm_mis_impala_1.jsonl  BENCHMARK_dm_mis_impala_3.jsonl  BENCHMARK_sport_events.jsonl  BENCHMARK_sport_events_factual.jsonl  CODEX_CONTEXT.md  DEPLOY_DOCKER_SIMPLE.md  DOCKER.md  Dockerfile  Dockerfile.frontend  INPUT_FORMAT.md  README.md  bench-app.env.example  docker-compose.t2s.yml  docker-compose.yml  pytest.ini  requirements.bench_app.txt  requirements.txt  setup-t2s.sh
tests/: __init__.py  test_csrf_middleware.py  test_lexical_terms.py  test_query_cache.py  test_settings_route.py  test_snowflake_loader.py  test_sql_gate.py  test_sql_gate_quoting.py
(+103 files in other folders)
