[project]
name = "t2s"
version = "0.2.0"
description = "Text2SQL tool that transforms natural language into SQL using graph-powered schema understanding"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "FalkorDB", email = "support@falkordb.com" },
    { name = "T2S" }
]
keywords = ["text2sql", "sql", "nlp", "llm", "database", "falkordb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies required for SDK (minimal)
dependencies = [
    "litellm>=1.83.0",
    "falkordb~=1.6.0",
    "psycopg2-binary~=2.9.12",
    "pymysql~=1.1.0",
    "jsonschema~=4.26.0",
    "tqdm~=4.67.3",
    "sqlglot>=26.0",
]

[project.optional-dependencies]
# Server dependencies (FastAPI, auth, etc.)
server = [
    "fastapi~=0.136.1",
    "uvicorn~=0.46.0",
    "authlib~=1.7.0",
    "itsdangerous~=2.2.0",
    "python-multipart~=0.0.27",
    "jinja2~=3.1.4",
    "fastmcp>=3.2.4",
    "graphiti-core>=0.28.1",
    "snowflake-connector-python~=4.4.0",
    "impyla~=0.23.0",
    "PyYAML~=6.0.3",
    "python-dotenv~=1.2.2",
    "aiohttp>=3.13.5",
]

# Development dependencies
dev = [
    "pytest~=9.0.3",
    "pytest-asyncio~=1.3.0",
    "pylint~=4.0.3",
    "playwright~=1.59.0",
    "pytest-playwright~=0.7.1",
]

# All dependencies (server + dev)
all = [
    "t2s[server]",
    "t2s[dev]",
]

[project.urls]
Homepage = "https://example.com/t2s"

[project.scripts]
t2s = "api.index:main"

[dependency-groups]
dev = [
    "pytest~=9.0.3",
    "pylint~=4.0.3",
    "playwright~=1.59.0",
    "pytest-playwright~=0.7.1",
    "pytest-asyncio~=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["t2s", "api"]

[tool.hatch.build.targets.sdist]
include = [
    "/t2s",
    "/api",
    "/README.md",
    "/LICENSE",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --tb=short --strict-markers --disable-warnings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: End-to-end tests using Playwright",
    "slow: Tests that take a long time to run",
    "auth: Tests that require authentication",
    "integration: Integration tests",
    "unit: Unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.pylint.main]
max-line-length = 120
ignore-patterns = ["test_.*\\.py", "conftest\\.py"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 120
